--- a/unit3/css/main.css
+++ b/unit3/css/main.css
@@ -1,13 +1,15 @@
 .welcome {
     width: 30%;
     margin: 0 auto;
-    background-color: red;
+
 }
 .container {
     width: 60%;
+    height: 100%;
     margin: 0 auto;
     text-align: center;
     background-color: green;
+    position: relative;
 }
 .todoentry {
     width: 30%;
@@ -20,29 +22,96 @@
     margin: 0 auto;
     background-color: blue;
 }
-.todos li {
+.item {
     margin: 10px 0;
-    background-color: white;
+    background-color: red;
     z-index: -1;
+    position: relative;
 }
-.todotext {
+.text {
+    width: 80%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+/*    
     width: 90%;
     height: 100%;
+    position: relative;
+    top: 0px;
+    left: 0px;
+*/
+    background: pink;
+}
+.check {
+    width: 10%;
+    height: 2ch;
+/*    width: auto;
+    height: 2ch;
+    background-color: blue;
+    padding: 1px;
+*/
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 10;
+/*    background: grey url("https://openclipart.org/image/2400px/svg_to_png/84289/23493485345.png") no-repeat;*/
+}
+/*
+.todos .item p {
+    width: 90%;
+    height: 100%;
+    min-height: 1.1rem;
     float: left;
+    position: relative;
+    top: 0px;
     background: pink;
 }
 
-.todosquare {
-    min-height: 1.1rem;
-    min-width: 1.5rem;
+.todos .item img {
+    height: 1.1rem;
+    width: auto;
     padding: 1px;
     float: right;
-/*    width: 100%;
-    height: 100%;*/
+    position: relative;
+    top: 0px;
+    right: 0px;
     z-index: 10;
-    background: grey url("https://openclipart.org/image/2400px/svg_to_png/84289/23493485345.png") no-repeat;
+    background: grey no-repeat;
     background-size: contain;
 }
-body {
+*/
+
+.itembox {
+    width: 60%;
+    min-height: 1.5em;
+    margin: 5px auto;
+    background-color: grey;
+    position: relative;
+}
+
+
+.itemleft {
+    width: 90%;
+    min-height: 1.5em;
+    background-color: red;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    text-align: center;
+}
+
+.itemright {
+    min-height: 1.5em;
+    width: 10%;
+    background-color: blue;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+
+document {
     box-sizing: border-box;
+}
+body * {
 }
