replaced the todoentry class plain text area with an input field and an element ID

--- a/unit3/css/main.css
+++ b/unit3/css/main.css
@@ -11,7 +11,7 @@
     background-color: green;
     position: relative;
 }
-.todoentry {
+#newTodo {
     width: 30%;
     margin: 0 auto;
     background-color: grey;
